[JPA][JC and Joseph] feature: apply pagination function for company